# TwinAudio

./: ARCHITECTURE-REFACTOR.md  COMPILATION-FIX.md  COMPILATION-STATUS.md  DELIVERY-CHECKLIST.md  HEADER-FIX-FINAL.md  PACKAGING-FIX-FINAL.md  PACKAGING-FIX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.en.md  README.md  REFACTOR-SUMMARY.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/lrust/twinaudio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  ipc_client.cpp
app/src/main/java/com/lrust/twinaudio/: AudioServiceHook.kt  HookEntry.kt  IPCManager.kt  MainActivity.kt
app/src/main/java/com/lrust/twinaudio/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/lrust/twinaudio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
magisk/: customize.sh  module.prop  sepolicy.rule  service.sh
magisk/zygisk/: build.gradle.kts
magisk/zygisk/jni/: CMakeLists.txt  README.md  audio_buffer.cpp  audio_hook.cpp  download-dobby.md  ipc_server.cpp  main.cpp  ndk_compat.h  zygisk.hpp
